# fluid

./: .gitattributes  .gitignore  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
fluid/: __init__.py  __main__.py  cli.py  config.py  detect.py  docker_manager.py  dockerfile.py  shell_wrapper.py  templates.py  tui.py
fluid/gui/: __init__.py  __main__.py  create_dialog.py  pty_bridge.py  server.py  terminal_panel.py  workers.py
fluid/gui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
fluid/gui/frontend/electron/: main.js  preload.js
fluid/gui/frontend/src/: App.module.css  App.tsx  main.tsx
fluid/gui/frontend/src/api/: api.ts  client.ts  hooks.ts
fluid/gui/frontend/src/components/: BuildQueue.module.css  BuildQueue.tsx  ContainerCard.module.css  ContainerCard.tsx  Dialog.module.css  Dialog.tsx  Header.module.css  Header.tsx  HostTerminal.module.css  HostTerminal.tsx  Sidebar.module.css  Sidebar.tsx  TerminalPanel.tsx
fluid/gui/frontend/src/context/: AppContext.tsx  BuildQueueContext.tsx
fluid/gui/frontend/src/hooks/: useBuildWebSocket.ts  useContainerPoll.ts  useContainerTerminal.ts  useHostTerminal.ts  useResizablePanel.ts
fluid/gui/frontend/src/pages/: ContainersPage.module.css  ContainersPage.tsx  HomePage.module.css  HomePage.tsx  ImagesPage.module.css  ImagesPage.tsx  SettingsPage.module.css  SettingsPage.tsx  TemplatesPage.module.css  (+2 more)
fluid/gui/static/: app.js  index.html  style.css
fluid/gui/static/assets/: index-BIC5y7Pb.js  index-BPjg5fT6.css  index-BQ3Bn-9S.js  index-MdmPlHGD.css
(+34 files in other folders)
